rename string variable
rename string variable and change its value to what ist does. If you
click you return to weekview.

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -139,8 +139,8 @@
 
 
     <string name="calendarAccountGlob">*@resource.calendar.google.com</string>
-    <string name="touchToReserve">Tippen Sie um zu reservieren</string>
     <string name="reservationCancelInfo">Du kannst Reservierungen löschen, welche ursprünglisch von einem Raum - Tablet erstellt wurde.</string>
+    <string name="touchToReturn">Tippe um zu reservieren</string>
     <string name="bookNow">Jetzt buchen</string>
     <string name="disconnectedWarning">Verbindung ist getrennt!</string>
     <string name="cancleTitle">Reservierung abbrechen?</string>
