Adds new options to settings page, reloads proxy after Google Account would have been changed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="goToAccountSettings">Go to account settings</string>
     <string name="goToCalendarSettings">Go to calendar settings</string>
     <string name="defaultRoomSelectionTitle">Select default room</string>
+    <string name="calendarResourcesHelpText">If this option is enabled, non-resource calendars will be shown.</string>
 
 
 </resources>
