--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -70,6 +70,10 @@
     <string name="used_google_account">Used Google Account</string>
     <string name="allAccountsMagicWord">(All)</string>
     <string name="shown_rooms">Visible rooms</string>
+    <string name="reserv_view_alternativ_label">Reservation view</string>
+    <string name="reserv_view_spinner_default">reservation view with timespan picker</string>
+    <string name="reserv_view_spinner_change">reservation view with different time buttons</string>
+    <string name="meetingTitleLabel">Meeting designation</string>
     <string name="meetingTitlePersonName">is person name who reservated</string>
     <string name="meetingTitleMeetingName">is meeting name</string>
 
