--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -140,6 +140,7 @@
     <string name="calendarAccountGlob">*@resource.calendar.google.com</string>
     <string name="reservationCancelInfo">You can cancel reservations that were originally made from a room tablet</string>
     <string name="touchToReturn">Tap for reservations</string>
+    <string name="book">Book room</string>
     <string name="bookNow">Book Now</string>
     <string name="disconnectedWarning">Disconnected!</string>
     <string name="cancleTitle">Cancel reservation?</string>
@@ -148,5 +149,10 @@
     <string name="resExaptionErrorCancel">It is not possible to cancle this reservation</string>
     <string name="saveSettings">save settings</string>
     <string name="calendarInfo">Tipp: Tap free time space to reserve</string>
+
+    <!--OnClickBooking-->
+    <string name="ERROR">Error</string>
+    <string name="SUCCESS">Reserved</string>
+    <string name="SUCCESS_Message">Your reservation was successful.</string>
 
 </resources>
