--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,6 @@
     <string name="googleAccountHelp">Account or accounts used for searching rooms.</string>
     <string name="defaultTitleForReservation">Reserved</string>
     <string name="hintText">Hint: You can use your tablet\'s address book contacts for reserving.</string>
+    <string name="permission_request_title">Permission Request</string>
+    <string name="permission_request_reason">We need your permission to access your contacts and calendar in order for the app to work.</string>
 </resources>
