--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -28,12 +28,23 @@
     <string name="seeAllRooms">すべての会議室</string>
     <string name="exchange_server_address">Exchange サーバーアドレス</string>
     <string name="room_name">デフォルトの会議室の名前</string>
+    <string name="PREFERENCES_NAME">ReservatorPreferences</string>
+    <string name="PREFERENCES_SERVER_ADDRESS">serverAddress</string>
+    <string name="PREFERENCES_ROOM_NAME">roomName</string>
+    <string name="PREFERENCES_USERNAME">username</string>
+    <string name="PREFERENCES_PASSWORD">password</string>
+    <string name="PREFERENCES_FUM_USERNAME">fumUsername</string>
+    <string name="PREFERENCES_FUM_PASSWORD">fumPassword</string>
+    <string name="PREFERENCES_UNSELECTED_ROOMS">unselectedRooms</string>
+    <string name="PREFERENCES_GOOGLE_ACCOUNT">googleAccount</string>
     <string name="removeUserData">ログイン情報の削除と設定をリセット</string>
     <string name="lobbyRoomName">ロビー</string>
     <string name="calendarError">Google カレンダーエラー</string>
     <string name="noCalendarsError">会議室カレンダーが見つかりません。このデバイスで Google アカウントが設定されていること、および Google カレンダーが会議室カレンダーと同期するように設定されていることを確認してください。</string>
     <string name="close">閉じる</string>
+    <string name="calendarAccountGlob">*@resource.calendar.google.com</string>
     <string name="used_google_account">使用した Google アカウント</string>
+    <string name="allAccountsMagicWord">(すべて)</string>
     <string name="shown_rooms">Visible rooms</string>
     <string name="reservationCancelInfo">会議室のタブレットで行われた予約をキャンセルすることができます</string>
     <string name="touchToReserve">タップして予約</string>
@@ -46,6 +57,7 @@
     <string name="googleAccountType">com.google</string>
     <string name="selectGoogleAccount">Google アカウントを選択</string>
     <string name="settingsDefaultAccountForReservation">予約のアカウントを選択</string>
+    <string name="accountForServation">reservationAccount</string>
     <string name="addressBookHelpText">このオプションを有効にすると、タブレットでの予約に、同期されるアカウントのアドレス帳の連絡先の正しい名前を入力する必要があります。</string>
     <string name="googleAccountHelp">アカウント、または会議室を検索するために使用されるアカウント。</string>
     <string name="defaultTitleForReservation">予約済</string>
