--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,39 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources tools:ignore="MissingTranslation" xmlns:tools="http://schemas.android.com/tools">
-  <string name="app_name">Reservator</string>
-  <string name="start">start</string>
-  <string name="end">end</string>
+<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
+    <string name="app_name">Reservator</string>
+    <string name="start">start</string>
+    <string name="end">end</string>
     <string name="book_now">Book now</string>
-  <string name="dateLabelFormat">EEEE, MMM. d</string>
-  <string name="weekLabelFormat">\'Week\' w</string>
+    <string name="dateLabelFormat">EEEE, MMM. d</string>
+    <string name="weekLabelFormat">\'Week\' w</string>
     <string name="seeAllRooms">All rooms</string>
-    <string name="room_name">Name of the default room</string>
-  <string name="removeUserData">Remove login info and reset settings</string>
-  <string name="lobbyRoomName">Lobby</string>
-  <string name="calendarError">Google Calendar error</string>
-  <string name="noCalendarsError">No meeting room calendars found. Please ensure that a Google Account has been configured on this device and that Google Calendar has been set to sync the meeting room calendars.</string>
-  <string name="close">Close</string>
-  <string name="used_google_account">Used Google Account</string>
-  <string name="shown_rooms">Visible rooms</string>
-  <string name="reservationCancelInfo">You can cancel reservations that were originally made from a room tablet</string>
-  <string name="touchToReserve">Tap for reservations</string>
-  <string name="bookNow">Book Now</string>
-  <string name="disconnectedWarning">Disconnected!</string>
-  <string name="aboutInfo">Reservator is made by Futurice, a lean service creation company with offices in Helsinki, Tampere, Berlin, Munich, Stockholm and London. More information at: www.futurice.com.\n\nThis application is published under the BSD license. You can find the source code at: http://github.com/futurice/meeting-room-tablet</string>
-  <string name="aboutTitle">About</string>
+    <string name="default_room_name">Name of the default room</string>
+    <string name="removeUserData">Remove login info and reset settings</string>
+    <string name="lobbyRoomName">Lobby</string>
+    <string name="calendarError">Google Calendar error</string>
+    <string name="noCalendarsError">No meeting room calendars found. Please ensure that a Google Account has been configured on this device and that Google Calendar has been set to sync the meeting room calendars.</string>
+    <string name="close">Close</string>
+    <string name="used_google_account">Used Google Account</string>
+    <string name="shown_rooms">Visible rooms</string>
+    <string name="reservationCancelInfo">You can cancel reservations that were originally made from a room tablet</string>
+    <string name="touchToReserve">Tap for reservations</string>
+    <string name="bookNow">Book Now</string>
+    <string name="disconnectedWarning">Disconnected!</string>
+    <string name="aboutInfo">Reservator is made by Futurice, a lean service creation company with offices in Helsinki, Tampere, Berlin, Munich, Stockholm and London. More information at: www.futurice.com.\n\nThis application is published under the BSD license. You can find the source code at: http://github.com/futurice/meeting-room-tablet</string>
+    <string name="aboutTitle">About</string>
     <string name="addressBookOptionLabel">Require address book contacts for reserving</string>
-  <string name="googleAccountType">com.google</string>
-  <string name="selectGoogleAccount">Select Google Account</string>
-  <string name="settingsDefaultAccountForReservation">Select account for reserving</string>
-  <string name="addressBookHelpText">If this option is enabled, reserving with the tablet requires entering a valid name that is synced to the accounts address book contacts.</string>
-  <string name="googleAccountHelp">Account or accounts used for searching rooms.</string>
-  <string name="defaultTitleForReservation">Reserved</string>
-  <string name="hintText">Hint: You can use your tablet\'s address book contacts for reserving.</string>
-  <string name="goToAccountSettings">Go to account settings</string>
+    <string name="googleAccountType">com.google</string>
+    <string name="selectGoogleAccount">Select Google Account</string>
+    <string name="settingsDefaultAccountForReservation">Select account for reserving</string>
+    <string name="addressBookHelpText">If this option is enabled, reserving with the tablet requires entering a valid name that is synced to the accounts address book contacts.</string>
+    <string name="googleAccountHelp">Account or accounts used for searching rooms.</string>
+    <string name="defaultTitleForReservation">Reserved</string>
+    <string name="hintText">Hint: You can use your tablet\'s address book contacts for reserving.</string>
+    <string name="goToAccountSettings">Go to account settings</string>
     <string name="defaultRoomSelectionTitle">Select default room</string>
-  <string name="calendarResourcesHelpText">If this option is enabled, non-resource calendars will be shown.</string>
-  <string name="permission_request_title">Permission Request</string>
-  <string name="permission_request_reason">We need your permission to access your contacts and calendar in order for the app to work.</string>
-  <string name="PREFERENCES_NAME">ReservatorPreferences</string>
-  <string name="PREFERENCES_ROOM_NAME">roomName</string>
+    <string name="calendarResourcesHelpText">If this option is enabled, non-resource calendars will be shown.</string>
+    <string name="permission_request_title">Permission Request</string>
+    <string name="permission_request_reason">We need your permission to access your contacts and calendar in order for the app to work.</string>
+    <string name="PREFERENCES_NAME">ReservatorPreferences</string>
+    <string name="PREFERENCES_ROOM_NAME">roomName</string>
+    <string name="room_name">Room Name</string>
+    <string name="cancel_reservation">Cancel reservation</string>
+    <string name="hint_your_name">Your name</string>
+    <string name="button_reserve">Reserve</string>
+    <string name="message_permissions_are_required">Reservator Needs Permissions to Work!</string>
+    <string name="room_capacity">for %1$d</string>
 </resources>
