--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,8 +16,8 @@
     <string name="used_google_account">Used Google Account</string>
     <string name="shown_rooms">Visible rooms</string>
     <string name="reservationCancelInfo">You can cancel reservations that were originally made from a room tablet</string>
-    <string name="touchToReserve">Tap for reservations</string>
-    <string name="bookNow">Book Now</string>
+    <string name="touchToReserve">Tap to see schedule</string>
+    <string name="bookNow">Use room now</string>
     <string name="disconnectedWarning">Disconnected!</string>
     <string name="aboutInfo">Reservator is made by Futurice, a lean service creation company with offices in Helsinki, Tampere, Berlin, Munich, Stockholm and London. More information at: www.futurice.com.\n\nThis application is published under the BSD license. You can find the source code at: http://github.com/futurice/meeting-room-tablet</string>
     <string name="aboutTitle">About</string>
