--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,10 @@
     <string name="start">start</string>
     <string name="end">end</string>
     <string name="book_now">Book now</string>
-    <string name="dateLabelFormat">EEEE, MMM. d</string>
+    <string name="dateLabelFormat">EEE, d/MM</string>
     <string name="weekLabelFormat">\'Week\' w</string>
     <string name="seeAllRooms">All rooms</string>
+    <string name="toMain">Main screen</string>
     <string name="default_room_name">Name of the default room</string>
     <string name="removeUserData">Remove login info and reset settings</string>
     <string name="lobbyRoomName">Lobby</string>
