--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,10 +54,10 @@
     <string name="free_at">Vapautuu/Ledigt från/Free at</string>
     <string name="meeting_description">Kuvaus/Beskrivning/Description</string>
     <string name="quick_booking">Pikavaraus/Snabbreservering/Use now:</string>
-    <string name="reservation_remaining">Varausta jäljellä/Bokning kvar/Reservation remaining</string>
-    <string name="default_reservation_description">Varaus/Bokning/Reservation</string>
+    <string name="reservation_remaining">Varausta jäljellä/Reserveringen kvar/Reservation remaining</string>
+    <string name="default_reservation_description">Varaus/Reservering/Reservation</string>
     <string name="approveChange">Vahvista muutos\nKonfirmera förändringen\nConfirm change</string>
     <string name="cancelChange">Muutokset tallennetaan/Ändringarna sparas/Saving changes\nPeruuta/Avbryt/Cancel</string>
-    <string name="modifyPrompt">Muokkaa varausta liukusäätimestä\nÄndra bokninen med slidern\nModify reservation by using the slider</string>
+    <string name="modifyPrompt">Muokkaa varausta liukusäätimestä\nÄndra reserveringen med skjutreglaget\nModify reservation using the slider</string>
 
 </resources>
