--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="room_name">Room Name</string>
     <string name="cancel_reservation">Cancel reservation</string>
     <string name="hint_your_name">Your name</string>
-    <string name="button_reserve">Varaa\nReservera\nReserve</string>
+    <string name="button_reserve">Varaa • Reservera • Reserve</string>
     <string name="message_permissions_are_required">Reservator Needs Permissions to Work!</string>
     <string name="room_capacity">for %1$d</string>
     <string name="end_plus_content_description">plus time</string>
@@ -52,7 +52,7 @@
     <string name="free_for_specific_amount">seuraava varaus/nästa reservering/next reservation</string>
     <string name="status_reserved">Varattu/Resrverat/Reserved</string>
     <string name="free_at">Vapautuu/Ledigt från/Free at</string>
-    <string name="meeting_description">Kuvaus/Beskrivning/Description</string>
+    <string name="meeting_description">Kuvaus | Beskrivning | Description</string>
     <string name="quick_booking">Pikavaraus/Snabbreservering/Use now:</string>
     <string name="reservation_remaining">Varausta jäljellä/Reservering kvar/Reservation remaining</string>
     <string name="default_reservation_description">Varaus/Reservering/Reservation</string>
